project refactored done

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <form id="form" class="modal-form">
                     <input id="name" type="text" data-index="new" class="modal-field" placeholder="Nome do Cliente" required>
                     <input id="email" type="email" class="modal-field" placeholder="e-mail do Cliente" required>
-                    <input id="cellphone" type="text" class="modal-field" placeholder="Celular do Cliente" required>
+                    <input id="cellphone" type="text" class="modal-field" placeholder="Telefone do Cliente" required>
                     <input id="city" type="text" class="modal-field" placeholder="Cidade do Cliente" required>
                 </form>
                 <footer class="modal-footer">
