--- a/index.html
+++ b/index.html
@@ -45,6 +45,24 @@
             </div>
         </div>
     </main>
+    <main>
+        <form id="signInForm">
+            <input id="user-name" type="text" class="modal-field" placeholder="Nome Completo" required>
+            <input id="user-email" type="text" class="modal-field" placeholder="Email" required>
+            <input id="tax-id" type="text" class="modal-field" placeholder="CPF" required>
+            <input id="user-pass" type="text" class="modal-field" placeholder="Senha" required>
+            <input id="confirmPass" type="text" class="modal-field" placeholder="Confirmar Senha" required>
+            <button type="button" class="button blue" id="signInButton">Logar</button>
+            </form>
+
+
+        <form id="signUpForm">
+        <input id="user-email" type="text" class="modal-field" placeholder="Email" required>
+        <input id="password" type="text" class="modal-field" placeholder="Senha" required>
+        <button type="button" class="button blue" id="signUpButton">Logar</button>
+        <a href="#">Esqueceu sua senha?</a>
+        </form>
+    </main>
     <footer>
 
     </footer>
