--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     </header>
     <main id="login">
         <form id="signUpForm">
-            <input id="user-name" type="text" class="modal-field" placeholder="Nome Completo" required>
-            <input id="user-email" type="text" class="modal-field" placeholder="Email" required>
-            <input id="tax-id" type="text" class="modal-field" placeholder="CPF" required>
-            <input id="user-pass" type="text" class="modal-field" placeholder="Senha" required>
-            <input id="confirmPass" type="text" class="modal-field" placeholder="Confirmar Senha" required>
+            <input id="register-name" type="text"  data-index="new" class="modal-field" placeholder="Nome Completo" required>
+            <input id="register-email" type="text" class="modal-field" placeholder="Email" required>
+            <input id="register-taxId" type="text" class="modal-field" placeholder="CPF" required>
+            <input id="register-pass" type="text" class="modal-field" placeholder="Senha" required>
+<!--             <input id="confirmPass" type="text" class="modal-field" placeholder="Confirmar Senha" required> -->
             <button type="button" class="button blue" id="signUpButton">Criar Usuário</button>
             <a href="#">Voltar</a>
             </form>
@@ -31,7 +31,7 @@
     </main>
     <main id="app">
         <button type="button" class="button blue" id="logoutButton">Logout</button>
-        <button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar Cliente</button>
+        <button type="button" class="button blue mobile" id="cadastrarCliente" hidden>Cadastrar Cliente</button>
         <table id="tableClient" class="records">
             <thead>
                 <tr>
@@ -55,8 +55,8 @@
                 <form id="form" class="modal-form">
                     <input id="name" type="text" data-index="new" class="modal-field" placeholder="Nome Completo" required>
                     <input id="email" type="email" class="modal-field" placeholder="E-mail" required>
-                    <input id="phone" type="number" class="modal-field" placeholder="CPF" required>
-                    <input id="city" type="password" class="modal-field" placeholder="Senha" required>
+                    <input id="taxId" type="text" class="modal-field" placeholder="CPF" required>
+                    <input id="password" type="password" class="modal-field" placeholder="Senha" required>
                 </form>
                 <footer class="modal-footer">
                     <button id="save" class="button green">Salvar</button>
@@ -66,6 +66,10 @@
             </div>
         </div>
     </main>
+
+    <footer>
+
+    </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
