--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <tr>
                     <th>Nome</th>
                     <th>E-mail</th>
-                    <th>Celular</th>
-                    <th>Cidade</th>
+                    <th>CPF</th>
+                    <th>Senha</th>
                     <th>Ação</th>
                 </tr>
             </thead>
