fix unused button and changed type password to input login

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             />
             <input
               id="login-password"
-              type="text"
+              type="password"
               class="modal-field"
               placeholder="Senha"
               required
@@ -140,7 +140,6 @@
           <footer class="modal-footer">
             <button id="save" class="button green">Salvar</button>
             <button id="cancel" class="button red">Cancelar</button>
-            <button id="forgot" class="button blue">Esqueceu a senha?</button>
           </footer>
         </div>
       </div>
