first part of the documentation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
               required
             />
             </label>
+            <label for="register-email">
+                Digite seu e-mail
+
             <input
               id="register-email"
               type="text"
@@ -33,6 +36,9 @@
               placeholder="Email"
               required
             />
+        </label>
+        <label for="register-taxId">
+            Digite seu CPF
             <input
               id="register-taxId"
               type="text"
@@ -40,6 +46,9 @@
               placeholder="CPF"
               required
             />
+        </label>
+        <label for="register-pass">
+            Insira uma senha
             <input
               id="register-pass"
               type="password"
@@ -47,7 +56,7 @@
               placeholder="Senha"
               required
             />
-            <!--             <input id="confirmPass" type="text" class="modal-field" placeholder="Confirmar Senha" required> -->
+        </label>
             <button type="button" class="button blue" id="signUpButton">
               Criar Usuário
             </button>
@@ -86,7 +95,7 @@
         >
           Cadastrar Cliente
         </button>
-        <h1>Cadastro de cliente</h1>
+        <h1>Clientes Cadastrados</h1>
       </header>
       <table id="tableClient" class="records">
         <thead>
